...
            if (didPop) {
              return;
            }
            await onPopInvoked(context);
          },
          child: Scaffold(
            key: const Key("dashboardView"),
            body: Consumer<DashBoardProvider>(
              builder: (context, provider, _) {
                return SafeArea(
                  child: (context.isWatch)
                      ? Localizations.override(
                          context: context,
...
                                  indicator: const BoxDecoration(),
                                  dividerHeight: 0,
                                  tabs: [
                                    Tab(text: 't_team'.tr(), icon: const Icon(Icons.group)),
                                    Tab(text: 't_notifications'.tr(), icon: const Icon(Icons.notifications)),
                                    Tab(
                                      key: const Key("tabSettings"),
                                      text: 't_settings'.tr(),
                                      icon: const Icon(Icons.settings),
                                    ),
                                  ],
                                ),
                              ),
...
